fixed spacing on /projects

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,7 +221,7 @@ img {
   #rccar-box {
     position: absolute;
     /*top: 75%;*/
-    top: 70%;
+    top: 65%;
     right: 10%;
   }
 
@@ -306,7 +306,7 @@ img {
   #rccar-box {
     position: absolute;
     /*top: 75%;*/
-    top: 70%;
+    top: 65%;
     right: 10%;
   }
 
